module(
    name = "rules_docker",
    version = "0.26.0.buildbuddy.1",
    compatibility_level = 1,
    repo_name = "io_bazel_rules_docker",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_ghodss_yaml",
    "com_github_google_go_containerregistry",
    "com_github_kylelemons_godebug",
    "com_github_pkg_errors",
    "in_gopkg_yaml_v2",
)

docker_toolchain = use_extension("//:extensions.bzl", "docker_toolchain")
docker_toolchain.configure(name = "default_docker_config")
use_repo(docker_toolchain, "default_docker_config")

register_toolchains(
    # Register the default docker toolchain that expects the 'docker'
    # executable to be in the PATH
    "@default_docker_config//:default_linux_toolchain",
    "@default_docker_config//:default_windows_toolchain",
    "@default_docker_config//:default_osx_toolchain",
)

download_puller = use_extension("//:extensions.bzl", "download_puller")
use_repo(
    download_puller,
    "go_puller_darwin",
    "go_puller_linux_amd64",
    "go_puller_linux_arm64",
    "go_puller_linux_s390x",
)

download_structure_test = use_extension("//:extensions.bzl", "download_structure_test")
use_repo(
    download_structure_test,
    "structure_test_darwin",
    "structure_test_linux",
    "structure_test_linux_aarch64",
)
