module(
    name = "rules_docker",
    version = "0.26.0.buildbuddy.1",
    compatibility_level = 1,
    repo_name = "io_bazel_rules_docker",
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_java", version = "8.16.1")
bazel_dep(name = "rules_go", version = "0.53.0", repo_name = "io_bazel_rules_go")
bazel_dep(name = "rules_python", version = "1.6.3")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "rules_shell", version = "0.6.1")
bazel_dep(name = "stardoc", version = "0.7.2", repo_name = "io_bazel_stardoc")
bazel_dep(name = "gazelle", version = "0.42.0", repo_name = "bazel_gazelle")

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_ghodss_yaml",
    "com_github_google_go_containerregistry",
    "com_github_kylelemons_godebug",
    "com_github_pkg_errors",
    "in_gopkg_yaml_v2",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.11",
)
use_repo(
    python,
    "python_3_11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")

http_file = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_file")

http_file(
    name = "go_puller_linux_amd64",
    executable = True,
    sha256 = "08b8963cce9234f57055bafc7cadd1624cdce3c5990048cea1df453d7d288bc6",
    urls = ["https://storage.googleapis.com/rules_docker/aad94363e63d31d574cf701df484b3e8b868a96a/puller-linux-amd64"],
)

http_file(
    name = "go_puller_linux_arm64",
    executable = True,
    sha256 = "912ee7c469b3e4bf15ba5d1f0ee500e7ec6724518862703fa8b09e4d58ce3ee6",
    urls = ["https://storage.googleapis.com/rules_docker/aad94363e63d31d574cf701df484b3e8b868a96a/puller-linux-arm64"],
)

http_file(
    name = "go_puller_linux_s390x",
    executable = True,
    sha256 = "a5527b7b3b4a266e4680a4ad8939429665d4173f26b35d5d317385134369e438",
    urls = ["https://storage.googleapis.com/rules_docker/aad94363e63d31d574cf701df484b3e8b868a96a/puller-linux-s390x"],
)

http_file(
    name = "go_puller_darwin",
    executable = True,
    sha256 = "4855c4f5927f8fb0f885510ab3e2a166d5fa7cde765fbe9aec97dc6b2761bb22",
    urls = ["https://storage.googleapis.com/rules_docker/aad94363e63d31d574cf701df484b3e8b868a96a/puller-darwin-amd64"],
)

http_file(
    name = "structure_test_linux",
    executable = True,
    sha256 = "1524da5fd5a0fc88c4c9257a3de05a45f135df07e6a684380dd5f659b9ce189b",
    urls = ["https://storage.googleapis.com/container-structure-test/v1.11.0/container-structure-test-linux-amd64"],
)

http_file(
    name = "structure_test_linux_aarch64",
    executable = True,
    sha256 = "b376ff80134d2d609c591b98d65d653a514755b4861185fd93159af7062ec65d",
    urls = ["https://storage.googleapis.com/container-structure-test/v1.11.0/container-structure-test-linux-arm64"],
)

http_file(
    name = "structure_test_darwin",
    executable = True,
    sha256 = "0a4ac9e221a86cda6bb9fedb2a0dfdce56f918327b8881977ad787ea15d0e82f",
    urls = ["https://storage.googleapis.com/container-structure-test/v1.11.0/container-structure-test-darwin-amd64"],
)

toolchain_configure = use_repo_rule("//toolchains/docker:toolchain.bzl", "toolchain_configure")

toolchain_configure(name = "default_docker_config")

register_toolchains(
    # Register the default docker toolchain that expects the 'docker'
    # executable to be in the PATH
    "@default_docker_config//:default_linux_toolchain",
    "@default_docker_config//:default_windows_toolchain",
    "@default_docker_config//:default_osx_toolchain",
)
