load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "image.go",
        "main.go",
        "stamp.go",
    ],
    importpath = "github.com/bazelbuild/rules_docker/container/pusher",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_google_go_containerregistry//pkg/authn:go_default_library",
        "@com_github_google_go_containerregistry//pkg/name:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/partial:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/remote:go_default_library",
        "@com_github_google_go_containerregistry//pkg/v1/types:go_default_library",
    ],
)

go_binary(
    name = "pusher",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
